--- a/certs.html
+++ b/certs.html
@@ -4,6 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/certs.css">
 </head>
 
 <body>
@@ -16,6 +17,16 @@
     </div>
 
     <h1 id="header">Certifications</h1>
+
+    <div id="certs-container">
+        <a href="https://www.solidworks.com/certifications/mechanical-design-cswa-mechanical-design" target="_blank"><div class="certs-item"><img src="images/certs/cswa.png"><div class="certs-text"><br>SOLIDWORKS CSWA<br>Mechanical Design</div></div></a>
+        <a href="https://www.oshaeducationcenter.com/osha-10-hour-general-industry/" target="_blank"><div class="certs-item"><img src="images/certs/osha-white.png"><div class="certs-text"><br>OSHA 10-Hour<br>General Industry Training</div></div></a>
+        <a href="https://www.fanucamerica.com/support/training/robot/elearn/fanuc-handlingtool-operations-programming" target="_blank"><div class="certs-item"><img src="images/certs/fanuc.png"><div class="certs-text"><br>FANUC HandlingTool<br>Operations & Programming</div></div></a>
+        <a href="https://www.ucertify.com/p/it-specialist-html-and-css.html" target="_blank"><div class="certs-item"><img src="images/certs/itcsshtml.png"><div class="certs-text"><br>Pearson IT Specialist<br>HTML & CSS</div></div></a>
+        <a href="https://certiport.pearsonvue.com/Certifications/IC3/Digital-Literacy-Certification/Badging" target="_blank"><div class="certs-item"><img src="images/certs/IC3logo.png"><div class="certs-text"><br>IC3 Digital Literacy<br>Global Standard 5</div></div></a>
+        <a href="https://www.etai.org/comps/CSS_comps.html" target="_blank"><div class="certs-item"><img src="images/certs/eta.png"><div class="certs-text"><br>ETA Customer<br>Service Specialist</div></div></a>
+        <a href="https://www.comptia.org/faq/itf/what-is-the-comptia-itf-certification" target="_blank"><div class="certs-item"><img src="images/certs/itf.png"><div class="certs-text"><br>CompTIA<br>IT Fundamentals</div></div></a>
+    </div>
 </body>
 
 </html>
