--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 id="title">ALEXANDER WILHELM</h1>
     <h2 id="subtitle">Welcome to my portfolio.</h2>
     <div class="home-buttons-container">
-        <a href="https://martinezclassroom.com/Projects/RedditSimulator2009/index.html" target="_blank"><div class="homebutton">Projects</div></a>
+        <a href="projects.html"><div class="homebutton">Projects</div></a>
         <div class="homebutton">Download Resume</div>
     </div>
 </body>
