--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/aboutme.css">
 </head>
 
 <body>
