--- a/certs.html
+++ b/certs.html
@@ -26,6 +26,7 @@
         <a href="https://certiport.pearsonvue.com/Certifications/IC3/Digital-Literacy-Certification/Badging" target="_blank"><div class="certs-item"><img src="images/certs/IC3logo.png"><div class="certs-text"><br>IC3 Digital Literacy<br>Global Standard 5</div></div></a>
         <a href="https://www.etai.org/comps/CSS_comps.html" target="_blank"><div class="certs-item"><img src="images/certs/eta.png"><div class="certs-text"><br>ETA Customer<br>Service Specialist</div></div></a>
         <a href="https://www.comptia.org/faq/itf/what-is-the-comptia-itf-certification" target="_blank"><div class="certs-item"><img src="images/certs/itf.png"><div class="certs-text"><br>CompTIA<br>IT Fundamentals</div></div></a>
+        <a href="https://unity.com/products/unity-certifications/user-programmer" target="_blank"><div class="certs-item"><img src="images/certs/unity.webp"><div class="certs-text"><br>Unity Certified User:<br>Programmer</div></div></a>
     </div>
 </body>
 
