--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2 id="subtitle">Welcome to my portfolio.</h2>
     <div class="home-buttons-container">
         <a href="projects.html"><div class="homebutton">Projects</div></a>
-        <div class="homebutton">Download Resume</div>
+        <a href="misc/resume.pdf" target="_blank"><div class="homebutton">Resume</div></a>
     </div>
 </body>
 
