--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,12 @@
     </div>
 
     <h1 id="header">Projects</h1>
+    <div class="home-buttons-container">
+    <a href="https://github.com/oaisd-ctc/reinventing-the-wheel-Dylan-Walters-Student" target="_blank"><div class="projectbutton">Reinventing The Wheel</div></a>
+    <a href="https://github.com/oaisd-ctc/inheritance-polymorphism-practice-Alexander-Wilhelm-Student" target="_blank"><div class="projectbutton">Inheritance & Polymorphism Demo</div></a>
+    <a href="https://martinezclassroom.com/Projects/RedditSimulator2009/index.html" target="_blank"><div class="projectbutton">Reddit Simulator 2009 <a href="https://github.com/oaisd-ctc/final-project-Alexander-Wilhelm-Student" target="_blank" class="sourcelink">(source)</a></div></a>
+    </div>
+    
 </body>
 
 </html>
