cosmetic changes, experience layout

--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/certs.css">
 </head>
 
 <body>
@@ -16,7 +17,17 @@
     </div>
 
     <h1 id="header">Experience</h1>
-    
+
+    <div id="certs-container">
+        <div class="certs-item"><img src="images/certs/cswa.png"><div class="certs-text"><br>SOLIDWORKS CSWA<br>Mechanical Design</div></div>
+        <div class="certs-item"><img src="images/certs/osha-white.png"><div class="certs-text"><br>OSHA 10-Hour<br>General Industry Training</div></div>
+        <div class="certs-item"><img src="images/certs/fanuc.png"><div class="certs-text"><br>FANUC HandlingTool<br>Operations & Programming</div></div>
+        <div class="certs-item"><img src="images/certs/itcsshtml.png"><div class="certs-text"><br>Pearson IT Specialist<br>HTML & CSS</div></div>
+        <div class="certs-item"><img src="images/certs/IC3logo.png"><div class="certs-text"><br>IC3 Digital Literacy<br>Global Standard 5</div></div>
+        <div class="certs-item"><img src="images/certs/eta.png"><div class="certs-text"><br>ETA Customer<br>Service Specialist</div></div>
+        <div class="certs-item"><img src="images/certs/itf.png"><div class="certs-text"><br>CompTIA<br>IT Fundamentals</div></div>
+        <div class="certs-item"><img src="images/certs/unity.webp"><div class="certs-text"><br>Unity Certified User:<br>Programmer</div></div>
+    </div>
 </body>
 
 </html>
