--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/projects.css">
 </head>
 
 <body>
@@ -16,10 +17,14 @@
     </div>
 
     <h1 id="header">Projects</h1>
-    <div class="home-buttons-container">   <!-- what a mess this is! todo: clean this shit up!! -->
-    <a href="https://github.com/oaisd-ctc/reinventing-the-wheel-Dylan-Walters-Student" target="_blank"><div class="projectbutton" style="background-image: url(images/projects/wheel.png); color: white">Reinventing The Wheel</div></a>
-    <a href="https://github.com/oaisd-ctc/inheritance-polymorphism-practice-Alexander-Wilhelm-Student" target="_blank"><div class="projectbutton" style="background-image: url(images/projects/inherpoly2.png)">Inheritance & Polymorphism Demo</div></a>
-    <a href="https://martinezclassroom.com/Projects/RedditSimulator2009/index.html" target="_blank"><div class="projectbutton" style="background-image: url(images/projects/rs2009.png)"><div>Reddit Simulator 2009 <a href="https://github.com/oaisd-ctc/final-project-Alexander-Wilhelm-Student" target="_blank" class="sourcelink">(source)</a></div></div></a>
+    <div class="home-buttons-container">
+
+    <a href="https://github.com/oaisd-ctc/reinventing-the-wheel-Dylan-Walters-Student" target="_blank"><div id="wheel" class="projectbutton">Reinventing The Wheel</div></a>
+
+    <a href="https://github.com/oaisd-ctc/inheritance-polymorphism-practice-Alexander-Wilhelm-Student" target="_blank"><div id="inherpoly" class="projectbutton">Inheritance & Polymorphism Demo</div></a>
+    
+    <a href="https://martinezclassroom.com/Projects/RedditSimulator2009/index.html" target="_blank"><div id="rs2009" class="projectbutton"><div>Reddit Simulator 2009 <a href="https://github.com/oaisd-ctc/final-project-Alexander-Wilhelm-Student" target="_blank" class="sourcelink">(source)</a></div></div></a>
+
     </div>
     
 </body>
