experience, cosmetic changes, more responsive

--- a/experience.html
+++ b/experience.html
@@ -19,14 +19,12 @@
     <h1 id="header">Experience</h1>
 
     <div id="certs-container">
-        <div class="certs-item"><img src="images/certs/cswa.png"><div class="certs-text"><br>SOLIDWORKS CSWA<br>Mechanical Design</div></div>
-        <div class="certs-item"><img src="images/certs/osha-white.png"><div class="certs-text"><br>OSHA 10-Hour<br>General Industry Training</div></div>
-        <div class="certs-item"><img src="images/certs/fanuc.png"><div class="certs-text"><br>FANUC HandlingTool<br>Operations & Programming</div></div>
-        <div class="certs-item"><img src="images/certs/itcsshtml.png"><div class="certs-text"><br>Pearson IT Specialist<br>HTML & CSS</div></div>
-        <div class="certs-item"><img src="images/certs/IC3logo.png"><div class="certs-text"><br>IC3 Digital Literacy<br>Global Standard 5</div></div>
-        <div class="certs-item"><img src="images/certs/eta.png"><div class="certs-text"><br>ETA Customer<br>Service Specialist</div></div>
-        <div class="certs-item"><img src="images/certs/itf.png"><div class="certs-text"><br>CompTIA<br>IT Fundamentals</div></div>
-        <div class="certs-item"><img src="images/certs/unity.webp"><div class="certs-text"><br>Unity Certified User:<br>Programmer</div></div>
+        <div class="certs-item"><img src="images/experience/solidworks.png"><div class="certs-text"><br>SOLIDWORKS CAD, Assembly & Printing</div></div>
+        <div class="certs-item"><img src="images/experience/electrical.png"><div class="certs-text"><br>Fundamentals of Electrical Engineering</div></div>
+        <div class="certs-item"><img src="images/experience/m20.png"><div class="certs-text"><br>FANUC 6-Axis Robot Operation & Programming</div></div>
+        <div class="certs-item"><img src="images/experience/htmlcss.png"><div class="certs-text"><br>Web Development w/ HTML5 & CSS3</div></div>
+        <div class="certs-item"><img src="images/experience/cs.png"><div class="certs-text"><br>Intermediate-Level OOP w/ C#</div></div>
+        <div class="certs-item"><img src="images/experience/unity.png"><div class="certs-text"><br>Game Development & Design w/ Unity</div></div>
     </div>
 </body>
 
