--- a/certs.html
+++ b/certs.html
@@ -5,6 +5,7 @@
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/certs.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
