--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
