what a shitload of fuck

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Alex's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"> <!-- what a shitload of fuck. -->
 </head>
 
 <body>
