--- a/aboutme.html
+++ b/aboutme.html
@@ -18,9 +18,8 @@
 
     <h1 id="header">About Me</h1>
     <div id="aboutme-container">
-        <img class="aboutme-item" id="aboutme-portrait" src="images/normal.jpg">
+        <img class="aboutme-item" id="aboutme-portrait" src="images/me.jpg">
         <div class="aboutme-item" id="aboutme-bio">
-            
             <h2>CONTACT</h2>
             ajwilhelm16@gmail.com<br>
             616-201-5416<br><br>
@@ -32,8 +31,6 @@
             I've tried my hand at programming and fiddling with computers since I was 6, but have only recently developed a marketable skillset.
             After spending 2 years at Careerline Tech Center, I've gained knowledge and experience suitable for positions in manufacturing and software engineering.
             I can bring creative solutions and technical expertise to your business.
-
-            
         </div>
     </div>
 </body>
