projects page now has github link

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,8 @@
         <div class="navitem"><a href="projects.html" class="navtext">PROJECTS</a></div>
     </div>
 
-    <h1 id="header">Projects</h1>
+    <h1 id="header">Projects</h1><br>
+    <h2 id="subheader">Also see my <a href=https://github.com/Alexander-Wilhelm-Student>GitHub profile!</a></h2>
     <div class="home-buttons-container">
 
     <a href="https://github.com/oaisd-ctc/reinventing-the-wheel-Dylan-Walters-Student" target="_blank"><div id="wheel" class="projectbutton">Reinventing The Wheel</div></a>
